
[package]
authors = ["APIx DevTools team"]
edition = "2021"
name = "atlas_local"
version = "1.2.0"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
atlas-local = { version = "0.5.0", default-features = false }
bollard = "0.20.1"
napi = { version = "^3.8.2", features = ["async", "anyhow"] }
napi-derive = "^3.5.1"

[dev-dependencies]
semver = "1.0.27"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
