
[package]
authors = ["APIx DevTools team"]
edition = "2021"
name = "atlas_local"
version = "1.3.0"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
atlas-local = { version = "0.7.1" }
napi = { version = "^3.9.0", features = ["async", "anyhow"] }
napi-derive = "^3.5.6"

[dev-dependencies]
semver = "1.0.28"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
